# rust-recipes

./: README.md
d1_filework/: Cargo.toml
d1_filework/note/: Failure.md  Module&Crate.md  Option.md  Result.md
d1_filework/src/: error.rs  lib.rs  main.rs
d1_filework/test_data/: transactions.json
d3_lifetime/: Cargo.toml
d3_lifetime/note/: Closure_as_Parameters.md  Ref_vs_MutRef.md  Reference_Counting.md
d3_lifetime/src/: main.rs  v2_closure.rs  v3_rc.rs
d3_lifetime/test_data/: v3_data.txt
d4_future/: Cargo.toml
d4_future/note/: Future_Combinators.md  Stream.md  TCPServer.md  Tokio.md  what_is_Future.md
d4_future/src/: lib.rs  main.rs  simple.rs
d6_diesel/: .env  .envrc  Cargo.toml  connect.sh
d6_diesel/docker/: docker-compose.yml
d6_diesel/migrations/2020-10-20-162818_create_initial_tables/: down.sql  up.sql
d6_diesel/migrations/2020-10-21-053733_add_owner_to_poll/: down.sql  up.sql
d6_diesel/note/: 1.Setup_DB.md  2.Install_Diesel_CLI.md  3.Writing_to_DB.md  4.Reading_Joins_from_the_DB.md  5.Selecting_Jooins.md  ex.Lifetime変数の使い所.md  ex.bcrypt.md  ex.clap.md  excirsise.md
d6_diesel/src/: cli_main.rs  lib.rs  models.rs  schema.rs
d7_rocket/: Cargo.toml  Rocket.toml
d7_rocket/note/: 1.Rocket_macros.md  2.Create_Responder.md  3.Connect_to_diesel.md  4.Session.md  ex.test.md
d7_rocket/site/static/: index.html
d7_rocket/src/: error.rs  main.rs  session.rs
d8_ffi/: Cargo.toml  Makefile
d8_ffi/note/: 1.call_C_from_Rust.md  2.call_Rust_from_C.md  4.Call_Rust_from_Python.md  (+2 more)
notes/: 1.Result&Opition.md  2.Iterators.md  7.Rocket.md
(+2 files in other folders)
