[[bin]]
name = 'd5_server'
path = 'src/main.rs'

[package]
name = 'd4_future'
version = '0.1.0'
authors = ['max <harumaxy@gmail.com>']
edition = '2018'

[lib]
name = 'd5_futures'
path = 'src/lib.rs'

[dependencies]
failure = '0.1.8'

[dependencies.futures]
version = '0.3.6'
features = [
    'compat',
    'io-compat',
]

[dependencies.tokio]
version = '0.3'
features = ['full']
