[[bin]]
name = 'doodle_cli'
path = 'src/cli_main.rs'

[package]
name = 'd6_diesel'
version = '0.1.0'
authors = ['max <harumaxy@gmail.com>']
edition = '2018'

[lib]
name = 'd6_doodle'
path = 'src/lib.rs'

[dependencies]
dotenv = '0.14.1'
failure = '0.1.5'
failure_derive = '0.1.5'
clap = '2.33.0'
bcrypt = '0.4'

[dependencies.diesel]
version = '1.4.5'
features = ['postgres']
