[package]
name = 'd7_rocket'
version = '0.1.0'
authors = ['max <harumaxy@gmail.com>']
edition = '2018'

[dependencies]
rocket = '0.4.5'
failure = '0.1.8'
failure_derive = '0.1.8'
rand = '0.7.0'

[dependencies.maud]
version = '0.22.0'
features = ['rocket']

[dependencies.diesel]
version = '1.4.2'
features = ['postgres']

[dependencies.d6_diesel]
path = '../d6_diesel/'

[dependencies.rocket_contrib]
version = '0.4.5'
default-features = false
features = ['diesel_postgres_pool']
